--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: Murder
-author: TheNewHEROBRINE
-version: 0.9
-api: ["3.0.0-ALPHA11"]
-main: TheNewHEROBRINE\Murder\MurderMain
+author: TheNewHEROBRINE, ElektroPrinz
+version: 1.0.3
+api: [3.0.0]
+main: Murder\MurderMain
 load: POSTWORLD
 
 permissions:
